added data summary filter apis
